Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> codigo
Rule 1     codigo -> algoritmo
Rule 2     codigo -> algoritmo codigo
Rule 3     algoritmo -> asignacion
Rule 4     algoritmo -> sentenciaWHILE
Rule 5     algoritmo -> sentenciaIf
Rule 6     algoritmo -> comentarios
Rule 7     algoritmo -> switch
Rule 8     algoritmo -> sentenciaFor
Rule 9     algoritmo -> crearVariable
Rule 10    algoritmo -> crearObjeto
Rule 11    algoritmo -> crearFunction
Rule 12    algoritmo -> estructuraArreglo
Rule 13    algoritmo -> sentenciaOR
Rule 14    algoritmo -> sentenciaAND
Rule 15    algoritmo -> comparaciones
Rule 16    algoritmo -> metodosArreglos
Rule 17    algoritmo -> sentenciaDo
Rule 18    algoritmo -> estructuraMap
Rule 19    algoritmo -> funcionesMap
Rule 20    algoritmo -> metodosTupla
Rule 21    algoritmo -> expresion_aritmetica
Rule 22    sentenciaDo -> DO LIZQ codigo LDER WHILE PIZQ comparacionWhile PDER PCOMA
Rule 23    estructuraMap -> VAR VARIABLE IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
Rule 24    estructuraMap -> LET VARIABLE IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
Rule 25    funcionesMap -> VARIABLE PUNTO ADD PIZQ expresion PDER PCOMA
Rule 26    funcionesMap -> VARIABLE PUNTO HAS PIZQ expresion PDER PCOMA
Rule 27    funcionesMap -> VARIABLE PUNTO FOREACH PIZQ PIZQ VARIABLE PDER DERECHA LIZQ console LDER PDER PCOMA
Rule 28    sentenciaWHILE -> WHILE PIZQ comparacionWhile PDER LIZQ codigo LDER
Rule 29    estructuraArreglo -> VAR VARIABLE IGUAL CIZQ conjunto CDER PCOMA
Rule 30    estructuraArreglo -> LET VARIABLE IGUAL CIZQ conjunto CDER PCOMA
Rule 31    estructuraArreglo -> CONST VARIABLE IGUAL CIZQ conjunto CDER PCOMA
Rule 32    comentarios -> COMENTARIO_EN_LINEA
Rule 33    comentarios -> COMENTARIO_MULTILINEA
Rule 34    metodosArreglos -> VARIABLE PUNTO PUSH PIZQ expresion PDER PCOMA
Rule 35    metodosArreglos -> VARIABLE PUNTO POP PIZQ PDER PCOMA
Rule 36    metodosArreglos -> VARIABLE PUNTO JOIN PIZQ PDER PCOMA
Rule 37    conjunto -> expresion
Rule 38    conjunto -> expresion COMA conjunto
Rule 39    asignacion -> VAR VARIABLE tipoasignacion expresion PCOMA
Rule 40    asignacion -> LET VARIABLE tipoasignacion expresion PCOMA
Rule 41    tipoasignacion -> IGUAL
Rule 42    tipoasignacion -> ASIG_SUMA
Rule 43    tipoasignacion -> ASIG_MEN
Rule 44    tipoasignacion -> ASIG_DIV
Rule 45    tipoasignacion -> ASIG_MUL
Rule 46    tipoasignacion -> ASIG_BOR
Rule 47    tipoasignacion -> ASIG_BAN
Rule 48    tipoasignacion -> ASIG_XOR
Rule 49    tipoasignacion -> ASIG_RESDU
Rule 50    tipoasignacion -> ASIG_EXPO
Rule 51    tipoasignacion -> ASIG_DE_I
Rule 52    tipoasignacion -> ASIG_DE_D
Rule 53    tipoasignacion -> ASIG_DSG
Rule 54    tipoasignacion -> ASIG_OR
Rule 55    tipoasignacion -> ASIG_ANU
Rule 56    expresion_aritmetica -> reglaSemanticaOperaciones
Rule 57    expresion_aritmetica -> PIZQ reglaSemanticaOperaciones PDER
Rule 58    expresion -> valorMatematico
Rule 59    expresion -> valorGramatico
Rule 60    expresion -> valorBooleano
Rule 61    comparacionWhile -> VARIABLE operadorComp valorMatematico
Rule 62    comparacionWhile -> valorBooleano
Rule 63    comparacionWhile -> valorMatematico operadorComp valorMatematico
Rule 64    comparacion -> expresion operadorComp expresion
Rule 65    comparaciones -> comparacion PCOMA
Rule 66    comparaciones -> comparacion AND comparacion PCOMA
Rule 67    comparaciones -> comparacion OR comparacion PCOMA
Rule 68    sentenciaAND -> expresion AND expresion PCOMA
Rule 69    sentenciaOR -> expresion OR expresion PCOMA
Rule 70    operadorComp -> MAYOR
Rule 71    operadorComp -> MENOR
Rule 72    operadorComp -> COMP_IGUAL
Rule 73    operadorComp -> DIFERENTE
Rule 74    valorMatematico -> ENTERO
Rule 75    valorMatematico -> DECIMAL
Rule 76    valorGramatico -> VARIABLE
Rule 77    valorGramatico -> CADENA
Rule 78    valorBooleano -> TRUE
Rule 79    valorBooleano -> FALSE
Rule 80    sentenciaIf -> IF PIZQ comparacion PDER LIZQ codigo LDER
Rule 81    sentenciaIf -> IF PIZQ comparacion PDER LIZQ codigo LDER ELSE LIZQ codigo LDER
Rule 82    metodosTupla -> VARIABLE PUNTO INDEX PIZQ expresion PDER PCOMA
Rule 83    metodosTupla -> VARIABLE PUNTO COUNT PIZQ VARIABLE PDER PCOMA
Rule 84    metodosTupla -> LEN PIZQ VARIABLE PDER PCOMA
Rule 85    switch -> SWITCH PIZQ expresion PDER cuerpoSwitch
Rule 86    cuerpoSwitch -> case
Rule 87    cuerpoSwitch -> default
Rule 88    case -> CASE COMILL expresion COMILL COLON codigo BREAK PCOMA
Rule 89    default -> DEFAULT COLON codigo
Rule 90    console -> CONSOLE PUNTO LOG PIZQ PDER PCOMA
Rule 91    sentenciaFor -> FOR PIZQ condicionFor PDER LIZQ codigo LDER
Rule 92    condicionFor -> asignacion PCOMA comparacion PCOMA VARIABLE DEC
Rule 93    crearVariable -> instruccionVL VARIABLE IGUAL ENTERO
Rule 94    crearVariable -> CADENA
Rule 95    instruccionVL -> VAR
Rule 96    instruccionVL -> LET
Rule 97    crearObjeto -> CONST VARIABLE IGUAL NEW OBJECT PIZQ PDER PCOMA
Rule 98    crearFunction -> FUNCTION VARIABLE PIZQ conjunto PDER LIZQ cuerpoFunction LDER
Rule 99    cuerpoFunction -> THIS PUNTO VARIABLE IGUAL VARIABLE PCOMA
Rule 100   reglaSemanticaOperaciones -> valorMatematico MAS valorMatematico
Rule 101   reglaSemanticaOperaciones -> valorMatematico RESTA valorMatematico
Rule 102   reglaSemanticaOperaciones -> valorMatematico PROD valorMatematico
Rule 103   reglaSemanticaOperaciones -> valorMatematico DIVISION valorMatematico
Rule 104   reglaSemanticaOperaciones -> valorMatematico MOD valorMatematico
Rule 105   reglaSemanticaOperaciones -> valorMatematico POTENCIA valorMatematico

Terminals, with rules where they appear

ADD                  : 25
AND                  : 66 68
ASIG_ANU             : 55
ASIG_BAN             : 47
ASIG_BOR             : 46
ASIG_DE_D            : 52
ASIG_DE_I            : 51
ASIG_DIV             : 44
ASIG_DSG             : 53
ASIG_EXPO            : 50
ASIG_MEN             : 43
ASIG_MUL             : 45
ASIG_OR              : 54
ASIG_RESDU           : 49
ASIG_SUMA            : 42
ASIG_XOR             : 48
BREAK                : 88
CADENA               : 77 94
CASE                 : 88
CDER                 : 23 24 29 30 31
CIZQ                 : 23 24 29 30 31
COLON                : 88 89
COMA                 : 38
COMENTARIO_EN_LINEA  : 32
COMENTARIO_MULTILINEA : 33
COMILL               : 88 88
COMP_IGUAL           : 72
CONSOLE              : 90
CONST                : 31 97
COUNT                : 83
DEC                  : 92
DECIMAL              : 75
DEFAULT              : 89
DERECHA              : 27
DIFERENTE            : 73
DIVISION             : 103
DO                   : 22
ELSE                 : 81
ENTERO               : 74 93
FALSE                : 79
FOR                  : 91
FOREACH              : 27
FUNCTION             : 98
HAS                  : 26
IF                   : 80 81
IGUAL                : 23 24 29 30 31 41 93 97 99
INDEX                : 82
JOIN                 : 36
LDER                 : 22 27 28 80 81 81 91 98
LEN                  : 84
LET                  : 24 30 40 96
LIZQ                 : 22 27 28 80 81 81 91 98
LOG                  : 90
MAS                  : 100
MAYOR                : 70
MENOR                : 71
MOD                  : 104
NEW                  : 23 24 97
OBJECT               : 97
OR                   : 67 69
PCOMA                : 22 23 24 25 26 27 29 30 31 34 35 36 39 40 65 66 67 68 69 82 83 84 88 90 92 92 97 99
PDER                 : 22 23 24 25 26 27 27 28 34 35 36 57 80 81 82 83 84 85 90 91 97 98
PIZQ                 : 22 23 24 25 26 27 27 28 34 35 36 57 80 81 82 83 84 85 90 91 97 98
POP                  : 35
POTENCIA             : 105
PROD                 : 102
PUNTO                : 25 26 27 34 35 36 82 83 90 99
PUSH                 : 34
RESTA                : 101
SET                  : 23 24
SWITCH               : 85
THIS                 : 99
TRUE                 : 78
VAR                  : 23 29 39 95
VARIABLE             : 23 24 25 26 27 27 29 30 31 34 35 36 39 40 61 76 82 83 83 84 92 93 97 98 99 99
WHILE                : 22 28
error                : 

Nonterminals, with rules where they appear

algoritmo            : 1 2
asignacion           : 3 92
case                 : 86
codigo               : 2 22 28 80 81 81 88 89 91 0
comentarios          : 6
comparacion          : 65 66 66 67 67 80 81 92
comparacionWhile     : 22 28
comparaciones        : 15
condicionFor         : 91
conjunto             : 23 24 29 30 31 38 98
console              : 27
crearFunction        : 11
crearObjeto          : 10
crearVariable        : 9
cuerpoFunction       : 98
cuerpoSwitch         : 85
default              : 87
estructuraArreglo    : 12
estructuraMap        : 18
expresion            : 25 26 34 37 38 39 40 64 64 68 68 69 69 82 85 88
expresion_aritmetica : 21
funcionesMap         : 19
instruccionVL        : 93
metodosArreglos      : 16
metodosTupla         : 20
operadorComp         : 61 63 64
reglaSemanticaOperaciones : 56 57
sentenciaAND         : 14
sentenciaDo          : 17
sentenciaFor         : 8
sentenciaIf          : 5
sentenciaOR          : 13
sentenciaWHILE       : 4
switch               : 7
tipoasignacion       : 39 40
valorBooleano        : 60 62
valorGramatico       : 59
valorMatematico      : 58 61 63 63 100 100 101 101 102 102 103 103 104 104 105 105

Parsing method: LALR

state 0

    (0) S' -> . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . asignacion
    (4) algoritmo -> . sentenciaWHILE
    (5) algoritmo -> . sentenciaIf
    (6) algoritmo -> . comentarios
    (7) algoritmo -> . switch
    (8) algoritmo -> . sentenciaFor
    (9) algoritmo -> . crearVariable
    (10) algoritmo -> . crearObjeto
    (11) algoritmo -> . crearFunction
    (12) algoritmo -> . estructuraArreglo
    (13) algoritmo -> . sentenciaOR
    (14) algoritmo -> . sentenciaAND
    (15) algoritmo -> . comparaciones
    (16) algoritmo -> . metodosArreglos
    (17) algoritmo -> . sentenciaDo
    (18) algoritmo -> . estructuraMap
    (19) algoritmo -> . funcionesMap
    (20) algoritmo -> . metodosTupla
    (21) algoritmo -> . expresion_aritmetica
    (39) asignacion -> . VAR VARIABLE tipoasignacion expresion PCOMA
    (40) asignacion -> . LET VARIABLE tipoasignacion expresion PCOMA
    (28) sentenciaWHILE -> . WHILE PIZQ comparacionWhile PDER LIZQ codigo LDER
    (80) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ codigo LDER
    (81) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ codigo LDER ELSE LIZQ codigo LDER
    (32) comentarios -> . COMENTARIO_EN_LINEA
    (33) comentarios -> . COMENTARIO_MULTILINEA
    (85) switch -> . SWITCH PIZQ expresion PDER cuerpoSwitch
    (91) sentenciaFor -> . FOR PIZQ condicionFor PDER LIZQ codigo LDER
    (93) crearVariable -> . instruccionVL VARIABLE IGUAL ENTERO
    (94) crearVariable -> . CADENA
    (97) crearObjeto -> . CONST VARIABLE IGUAL NEW OBJECT PIZQ PDER PCOMA
    (98) crearFunction -> . FUNCTION VARIABLE PIZQ conjunto PDER LIZQ cuerpoFunction LDER
    (29) estructuraArreglo -> . VAR VARIABLE IGUAL CIZQ conjunto CDER PCOMA
    (30) estructuraArreglo -> . LET VARIABLE IGUAL CIZQ conjunto CDER PCOMA
    (31) estructuraArreglo -> . CONST VARIABLE IGUAL CIZQ conjunto CDER PCOMA
    (69) sentenciaOR -> . expresion OR expresion PCOMA
    (68) sentenciaAND -> . expresion AND expresion PCOMA
    (65) comparaciones -> . comparacion PCOMA
    (66) comparaciones -> . comparacion AND comparacion PCOMA
    (67) comparaciones -> . comparacion OR comparacion PCOMA
    (34) metodosArreglos -> . VARIABLE PUNTO PUSH PIZQ expresion PDER PCOMA
    (35) metodosArreglos -> . VARIABLE PUNTO POP PIZQ PDER PCOMA
    (36) metodosArreglos -> . VARIABLE PUNTO JOIN PIZQ PDER PCOMA
    (22) sentenciaDo -> . DO LIZQ codigo LDER WHILE PIZQ comparacionWhile PDER PCOMA
    (23) estructuraMap -> . VAR VARIABLE IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
    (24) estructuraMap -> . LET VARIABLE IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
    (25) funcionesMap -> . VARIABLE PUNTO ADD PIZQ expresion PDER PCOMA
    (26) funcionesMap -> . VARIABLE PUNTO HAS PIZQ expresion PDER PCOMA
    (27) funcionesMap -> . VARIABLE PUNTO FOREACH PIZQ PIZQ VARIABLE PDER DERECHA LIZQ console LDER PDER PCOMA
    (82) metodosTupla -> . VARIABLE PUNTO INDEX PIZQ expresion PDER PCOMA
    (83) metodosTupla -> . VARIABLE PUNTO COUNT PIZQ VARIABLE PDER PCOMA
    (84) metodosTupla -> . LEN PIZQ VARIABLE PDER PCOMA
    (56) expresion_aritmetica -> . reglaSemanticaOperaciones
    (57) expresion_aritmetica -> . PIZQ reglaSemanticaOperaciones PDER
    (95) instruccionVL -> . VAR
    (96) instruccionVL -> . LET
    (58) expresion -> . valorMatematico
    (59) expresion -> . valorGramatico
    (60) expresion -> . valorBooleano
    (64) comparacion -> . expresion operadorComp expresion
    (100) reglaSemanticaOperaciones -> . valorMatematico MAS valorMatematico
    (101) reglaSemanticaOperaciones -> . valorMatematico RESTA valorMatematico
    (102) reglaSemanticaOperaciones -> . valorMatematico PROD valorMatematico
    (103) reglaSemanticaOperaciones -> . valorMatematico DIVISION valorMatematico
    (104) reglaSemanticaOperaciones -> . valorMatematico MOD valorMatematico
    (105) reglaSemanticaOperaciones -> . valorMatematico POTENCIA valorMatematico
    (74) valorMatematico -> . ENTERO
    (75) valorMatematico -> . DECIMAL
    (76) valorGramatico -> . VARIABLE
    (77) valorGramatico -> . CADENA
    (78) valorBooleano -> . TRUE
    (79) valorBooleano -> . FALSE

    VAR             shift and go to state 22
    LET             shift and go to state 25
    WHILE           shift and go to state 26
    IF              shift and go to state 28
    COMENTARIO_EN_LINEA shift and go to state 30
    COMENTARIO_MULTILINEA shift and go to state 31
    SWITCH          shift and go to state 32
    FOR             shift and go to state 33
    CADENA          shift and go to state 36
    CONST           shift and go to state 37
    FUNCTION        shift and go to state 38
    VARIABLE        shift and go to state 23
    DO              shift and go to state 39
    LEN             shift and go to state 40
    PIZQ            shift and go to state 27
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

    codigo                         shift and go to state 1
    algoritmo                      shift and go to state 2
    asignacion                     shift and go to state 3
    sentenciaWHILE                 shift and go to state 4
    sentenciaIf                    shift and go to state 5
    comentarios                    shift and go to state 6
    switch                         shift and go to state 7
    sentenciaFor                   shift and go to state 8
    crearVariable                  shift and go to state 9
    crearObjeto                    shift and go to state 10
    crearFunction                  shift and go to state 11
    estructuraArreglo              shift and go to state 12
    sentenciaOR                    shift and go to state 13
    sentenciaAND                   shift and go to state 14
    comparaciones                  shift and go to state 15
    metodosArreglos                shift and go to state 16
    sentenciaDo                    shift and go to state 17
    estructuraMap                  shift and go to state 18
    funcionesMap                   shift and go to state 19
    metodosTupla                   shift and go to state 20
    expresion_aritmetica           shift and go to state 21
    expresion                      shift and go to state 24
    comparacion                    shift and go to state 29
    instruccionVL                  shift and go to state 34
    reglaSemanticaOperaciones      shift and go to state 41
    valorMatematico                shift and go to state 42
    valorGramatico                 shift and go to state 43
    valorBooleano                  shift and go to state 44

state 1

    (0) S' -> codigo .



state 2

    (1) codigo -> algoritmo .
    (2) codigo -> algoritmo . codigo
    (1) codigo -> . algoritmo
    (2) codigo -> . algoritmo codigo
    (3) algoritmo -> . asignacion
    (4) algoritmo -> . sentenciaWHILE
    (5) algoritmo -> . sentenciaIf
    (6) algoritmo -> . comentarios
    (7) algoritmo -> . switch
    (8) algoritmo -> . sentenciaFor
    (9) algoritmo -> . crearVariable
    (10) algoritmo -> . crearObjeto
    (11) algoritmo -> . crearFunction
    (12) algoritmo -> . estructuraArreglo
    (13) algoritmo -> . sentenciaOR
    (14) algoritmo -> . sentenciaAND
    (15) algoritmo -> . comparaciones
    (16) algoritmo -> . metodosArreglos
    (17) algoritmo -> . sentenciaDo
    (18) algoritmo -> . estructuraMap
    (19) algoritmo -> . funcionesMap
    (20) algoritmo -> . metodosTupla
    (21) algoritmo -> . expresion_aritmetica
    (39) asignacion -> . VAR VARIABLE tipoasignacion expresion PCOMA
    (40) asignacion -> . LET VARIABLE tipoasignacion expresion PCOMA
    (28) sentenciaWHILE -> . WHILE PIZQ comparacionWhile PDER LIZQ codigo LDER
    (80) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ codigo LDER
    (81) sentenciaIf -> . IF PIZQ comparacion PDER LIZQ codigo LDER ELSE LIZQ codigo LDER
    (32) comentarios -> . COMENTARIO_EN_LINEA
    (33) comentarios -> . COMENTARIO_MULTILINEA
    (85) switch -> . SWITCH PIZQ expresion PDER cuerpoSwitch
    (91) sentenciaFor -> . FOR PIZQ condicionFor PDER LIZQ codigo LDER
    (93) crearVariable -> . instruccionVL VARIABLE IGUAL ENTERO
    (94) crearVariable -> . CADENA
    (97) crearObjeto -> . CONST VARIABLE IGUAL NEW OBJECT PIZQ PDER PCOMA
    (98) crearFunction -> . FUNCTION VARIABLE PIZQ conjunto PDER LIZQ cuerpoFunction LDER
    (29) estructuraArreglo -> . VAR VARIABLE IGUAL CIZQ conjunto CDER PCOMA
    (30) estructuraArreglo -> . LET VARIABLE IGUAL CIZQ conjunto CDER PCOMA
    (31) estructuraArreglo -> . CONST VARIABLE IGUAL CIZQ conjunto CDER PCOMA
    (69) sentenciaOR -> . expresion OR expresion PCOMA
    (68) sentenciaAND -> . expresion AND expresion PCOMA
    (65) comparaciones -> . comparacion PCOMA
    (66) comparaciones -> . comparacion AND comparacion PCOMA
    (67) comparaciones -> . comparacion OR comparacion PCOMA
    (34) metodosArreglos -> . VARIABLE PUNTO PUSH PIZQ expresion PDER PCOMA
    (35) metodosArreglos -> . VARIABLE PUNTO POP PIZQ PDER PCOMA
    (36) metodosArreglos -> . VARIABLE PUNTO JOIN PIZQ PDER PCOMA
    (22) sentenciaDo -> . DO LIZQ codigo LDER WHILE PIZQ comparacionWhile PDER PCOMA
    (23) estructuraMap -> . VAR VARIABLE IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
    (24) estructuraMap -> . LET VARIABLE IGUAL NEW SET PIZQ CIZQ conjunto CDER PDER PCOMA
    (25) funcionesMap -> . VARIABLE PUNTO ADD PIZQ expresion PDER PCOMA
    (26) funcionesMap -> . VARIABLE PUNTO HAS PIZQ expresion PDER PCOMA
    (27) funcionesMap -> . VARIABLE PUNTO FOREACH PIZQ PIZQ VARIABLE PDER DERECHA LIZQ console LDER PDER PCOMA
    (82) metodosTupla -> . VARIABLE PUNTO INDEX PIZQ expresion PDER PCOMA
    (83) metodosTupla -> . VARIABLE PUNTO COUNT PIZQ VARIABLE PDER PCOMA
    (84) metodosTupla -> . LEN PIZQ VARIABLE PDER PCOMA
    (56) expresion_aritmetica -> . reglaSemanticaOperaciones
    (57) expresion_aritmetica -> . PIZQ reglaSemanticaOperaciones PDER
    (95) instruccionVL -> . VAR
    (96) instruccionVL -> . LET
    (58) expresion -> . valorMatematico
    (59) expresion -> . valorGramatico
    (60) expresion -> . valorBooleano
    (64) comparacion -> . expresion operadorComp expresion
    (100) reglaSemanticaOperaciones -> . valorMatematico MAS valorMatematico
    (101) reglaSemanticaOperaciones -> . valorMatematico RESTA valorMatematico
    (102) reglaSemanticaOperaciones -> . valorMatematico PROD valorMatematico
    (103) reglaSemanticaOperaciones -> . valorMatematico DIVISION valorMatematico
    (104) reglaSemanticaOperaciones -> . valorMatematico MOD valorMatematico
    (105) reglaSemanticaOperaciones -> . valorMatematico POTENCIA valorMatematico
    (74) valorMatematico -> . ENTERO
    (75) valorMatematico -> . DECIMAL
    (76) valorGramatico -> . VARIABLE
    (77) valorGramatico -> . CADENA
    (78) valorBooleano -> . TRUE
    (79) valorBooleano -> . FALSE

  ! shift/reduce conflict for VAR resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for COMENTARIO_EN_LINEA resolved as shift
  ! shift/reduce conflict for COMENTARIO_MULTILINEA resolved as shift
  ! shift/reduce conflict for SWITCH resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for CADENA resolved as shift
  ! shift/reduce conflict for CONST resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for VARIABLE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for LEN resolved as shift
  ! shift/reduce conflict for PIZQ resolved as shift
  ! shift/reduce conflict for ENTERO resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
  ! shift/reduce conflict for TRUE resolved as shift
  ! shift/reduce conflict for FALSE resolved as shift
    $end            reduce using rule 1 (codigo -> algoritmo .)
    LDER            reduce using rule 1 (codigo -> algoritmo .)
    BREAK           reduce using rule 1 (codigo -> algoritmo .)
    VAR             shift and go to state 22
    LET             shift and go to state 25
    WHILE           shift and go to state 26
    IF              shift and go to state 28
    COMENTARIO_EN_LINEA shift and go to state 30
    COMENTARIO_MULTILINEA shift and go to state 31
    SWITCH          shift and go to state 32
    FOR             shift and go to state 33
    CADENA          shift and go to state 36
    CONST           shift and go to state 37
    FUNCTION        shift and go to state 38
    VARIABLE        shift and go to state 23
    DO              shift and go to state 39
    LEN             shift and go to state 40
    PIZQ            shift and go to state 27
    ENTERO          shift and go to state 35
    DECIMAL         shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

  ! VAR             [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! LET             [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! WHILE           [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! IF              [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! COMENTARIO_EN_LINEA [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! COMENTARIO_MULTILINEA [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! SWITCH          [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! FOR             [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! CADENA          [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! CONST           [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! FUNCTION        [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! VARIABLE        [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! DO              [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! LEN             [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! PIZQ            [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! ENTERO          [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! DECIMAL         [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! TRUE            [ reduce using rule 1 (codigo -> algoritmo .) ]
  ! FALSE           [ reduce using rule 1 (codigo -> algoritmo .) ]

    algoritmo                      shift and go to state 2
    codigo                         shift and go to state 48
    asignacion                     shift and go to state 3
    sentenciaWHILE                 shift and go to state 4
    sentenciaIf                    shift and go to state 5
    comentarios                    shift and go to state 6
    switch                         shift and go to state 7
    sentenciaFor                   shift and go to state 8
    crearVariable                  shift and go to state 9
    crearObjeto                    shift and go to state 10
    crearFunction                  shift and go to state 11
    estructuraArreglo              shift and go to state 12
    sentenciaOR                    shift and go to state 13
    sentenciaAND                   shift and go to state 14
    comparaciones                  shift and go to state 15
    metodosArreglos                shift and go to state 16
    sentenciaDo                    shift and go to state 17
    estructuraMap                  shift and go to state 18
    funcionesMap                   shift and go to state 19
    metodosTupla                   shift and go to state 20
    expresion_aritmetica           shift and go to state 21
    expresion                      shift and go to state 24
    comparacion                    shift and go to state 29
    instruccionVL                  shift and go to state 34
    reglaSemanticaOperaciones      shift and go to state 41
    valorMatematico                shift and go to state 42
    valorGramatico                 shift and go to state 43
    valorBooleano                  shift and go to state 44

state 3

    (3) algoritmo -> asignacion .

    VAR             reduce using rule 3 (algoritmo -> asignacion .)
    LET             reduce using rule 3 (algoritmo -> asignacion .)
    WHILE           reduce using rule 3 (algoritmo -> asignacion .)
    IF              reduce using rule 3 (algoritmo -> asignacion .)
    COMENTARIO_EN_LINEA reduce using rule 3 (algoritmo -> asignacion .)
    COMENTARIO_MULTILINEA reduce using rule 3 (algoritmo -> asignacion .)
    SWITCH          reduce using rule 3 (algoritmo -> asignacion .)
    FOR             reduce using rule 3 (algoritmo -> asignacion .)
    CADENA          reduce using rule 3 (algoritmo -> asignacion .)
    CONST           reduce using rule 3 (algoritmo -> asignacion .)
    FUNCTION        reduce using rule 3 (algoritmo -> asignacion .)
    VARIABLE        reduce using rule 3 (algoritmo -> asignacion .)
    DO              reduce using rule 3 (algoritmo -> asignacion .)
    LEN             reduce using rule 3 (algoritmo -> asignacion .)
    PIZQ            reduce using rule 3 (algoritmo -> asignacion .)
    ENTERO          reduce using rule 3 (algoritmo -> asignacion .)
    DECIMAL         reduce using rule 3 (algoritmo -> asignacion .)
    TRUE            reduce using rule 3 (algoritmo -> asignacion .)
    FALSE           reduce using rule 3 (algoritmo -> asignacion .)
    $end            reduce using rule 3 (algoritmo -> asignacion .)
    LDER            reduce using rule 3 (algoritmo -> asignacion .)
    BREAK           reduce using rule 3 (algoritmo -> asignacion .)


state 4

    (4) algoritmo -> sentenciaWHILE .

    VAR             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    LET             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    WHILE           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    IF              reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    COMENTARIO_EN_LINEA reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    COMENTARIO_MULTILINEA reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    SWITCH          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FOR             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CADENA          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    CONST           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FUNCTION        reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    VARIABLE        reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    DO              reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    LEN             reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    PIZQ            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    ENTERO          reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    DECIMAL         reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    TRUE            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    FALSE           reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    $end            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    LDER            reduce using rule 4 (algoritmo -> sentenciaWHILE .)
    BREAK           reduce using rule 4 (algoritmo -> sentenciaWHILE .)


state 5

    (5) algoritmo -> sentenciaIf .

    VAR             reduce using rule 5 (algoritmo -> sentenciaIf .)
    LET             reduce using rule 5 (algoritmo -> sentenciaIf .)
    WHILE           reduce using rule 5 (algoritmo -> sentenciaIf .)
    IF              reduce using rule 5 (algoritmo -> sentenciaIf .)
    COMENTARIO_EN_LINEA reduce using rule 5 (algoritmo -> sentenciaIf .)
    COMENTARIO_MULTILINEA reduce using rule 5 (algoritmo -> sentenciaIf .)
    SWITCH          reduce using rule 5 (algoritmo -> sentenciaIf .)
    FOR             reduce using rule 5 (algoritmo -> sentenciaIf .)
    CADENA          reduce using rule 5 (algoritmo -> sentenciaIf .)
    CONST           reduce using rule 5 (algoritmo -> sentenciaIf .)
    FUNCTION        reduce using rule 5 (algoritmo -> sentenciaIf .)
    VARIABLE        reduce using rule 5 (algoritmo -> sentenciaIf .)
    DO              reduce using rule 5 (algoritmo -> sentenciaIf .)
    LEN             reduce using rule 5 (algoritmo -> sentenciaIf .)
    PIZQ            reduce using rule 5 (algoritmo -> sentenciaIf .)
    ENTERO          reduce using rule 5 (algoritmo -> sentenciaIf .)
    DECIMAL         reduce using rule 5 (algoritmo -> sentenciaIf .)
    TRUE            reduce using rule 5 (algoritmo -> sentenciaIf .)
    FALSE           reduce using rule 5 (algoritmo -> sentenciaIf .)
    $end            reduce using rule 5 (algoritmo -> sentenciaIf .)
    LDER            reduce using rule 5 (algoritmo -> sentenciaIf .)
    BREAK           reduce using rule 5 (algoritmo -> sentenciaIf .)


state 6

    (6) algoritmo -> comentarios .
